--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,4 +1,4 @@
-.message {
+/* .message {
     color: green;
     background: lightgrey;
     font-size: 20px;
@@ -6,4 +6,24 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-  }
+  } */
+
+  .success {
+    color: green;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.error {
+    color: red;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
